<resources>
    <string name="facebook_app_id">3040495185997525</string>
    <string name="fb_login_protocol_scheme">fb3040495185997525</string>

    <string name="app_name">BuySellRent</string>
    <string name="title_activity_start_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_settings">Settings</string>
    <string name="title_ads">Ads</string>
    <string name="title_sell">Sell</string>
    <string name="login_phone">Log in with Phone</string>
    <string name="login_google">Log in with Google</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_email">Continue with Email</string>
    <string name="enter">Enter your Phone</string>
    <string name="confirm">We will send a confirmation code to your phone</string>
    <string name="country">Country</string>
    <string name="code">+977</string>
    <string name="num">Phone Number</string>
    <string name="next">Next</string>
    <string name="resend">Resend OTP</string>
    <string name="receive">"Didn't receive OTP?"</string>
    <string name="otp">Enter One Time Password (OTP)</string>
    <string name="pass">Password</string>
    <string name="repeatPass">Repeat Password</string>
    <string name="fullName">Full Name</string>
    <string name="typeEmail">Email Address</string>
    <string name="signUp">SignUp</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot password?</string>
    <string name="createNew">Create a new Account</string>
    <string name="invalid">Invalid Username or Password</string>
    <string name="signOut">Sign Out</string>
    <string name="load">Loading...</string>
    <string name="error">Error</string>
    <string name="edit"><u>View or Edit Profile</u></string>
    <string name="verify">Verify your Email</string>
    <string name="sent">A verification email has been sent to %1$s</string>
    <string name="resendEmail">Resend Verification Email</string>
    <string name="redirect">Click continue once you have verified your email address.</string>
    <string name="cont">Continue</string>
    <string name="done">Save</string>
    <string name="basic">Basic Information</string>
    <string name="contact">Contact Information</string>
    <string name="optional">Optional Information</string>
    <string name="fb">Facebook</string>
    <string name="g">Google</string>
    <string name="fbConnect">Sign in with Facebook and discover your trusted connections to buyers</string>
    <string name="gConnect">Connect to your Google account for simplicity and ease of use</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="online">online</string>
    <string name="last_seen">Last seen:</string>
    <string name="type">Type a message</string>
    <string name="noMsg">No Message</string>

    <string-array name="fuel_types">

        <item>Petrol</item>
        <item>Diesel</item>
        <item>LPG</item>
        <item>CNG &amp; Hybrids</item>
        <item>Electric</item>
    </string-array>
</resources>