<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_sell_black_24dp"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_ads"
        android:icon="@drawable/ic_ads_black_24dp"
        android:title="@string/title_ads" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>