<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SignIn.EmailSignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="20">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="50sp"
            android:maxLines="1"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/app_name"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="60"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/invalid"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/typeEmail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <TextView
            android:clickable="true"
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="50dp"
            android:background="@null"
            android:text="@string/forgot"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_weight="20">

        <TextView
            android:clickable="true"
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:text="@string/createNew"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>