<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/otp"
        android:layout_marginBottom="18dp"
        android:textColor="@android:color/black"
        android:textSize="20sp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <com.example.buysellrent.Class.OtpEditText
            android:id="@+id/otp"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:cursorVisible="true"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive"/>

        <TextView
            android:id="@+id/resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:clickable="true"
            android:text="@string/resend"
            android:textColor="#216EF3"
            tools:ignore="KeyboardInaccessibleWidget" />

    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button"
        android:text="@string/next" />

</LinearLayout>
