<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/basic"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/dp"
                    android:layout_width="100dp"
                    android:layout_height="90dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_deafault_dp" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullName"
                    android:inputType="textPersonName"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/contact"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:focusable="false">

                <EditText
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:hint="@string/country"
                    android:inputType="none"
                    android:text="@string/code"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:clickable="true"
                    android:focusable="false"
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/num"
                    android:inputType="none"
                    android:maxLength="10"
                    android:cursorVisible="false"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/typeEmail"
                    android:inputType="textEmailAddress"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/optional"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fb"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="3"
                    android:text="@string/fbConnect" />

            </LinearLayout>

            <Button
                android:id="@+id/connectFb"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/custom_button"
                android:text="@string/connect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:maxLines="3"
                    android:text="@string/gConnect" />

            </LinearLayout>

            <Button
                android:id="@+id/connectG"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/custom_button"
                android:text="@string/connect"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>