<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:src="@drawable/logo_temp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginRight="30dp"
        android:layout_weight="10"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:hint="@string/typeEmail"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@color/quantum_grey"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_weight="10"
        android:background="@drawable/custom_button"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/quantum_grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_weight="5"
        android:background="@null"
        android:clickable="true"
        android:text="@string/forgot"
        android:textColor="#0970D2"
        android:textSize="12sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="10"
        android:background="@color/buttonBackground"
        android:text="@string/login"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="40"
            android:background="#c0c0c0" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center"
            android:text="OR"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp"
            android:layout_weight="40"
            android:background="#c0c0c0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/google"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/login_google"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:paddingLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:drawableLeft="@drawable/ic_phone"
            android:text="@string/login_phone"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="10"
        android:background="#3B5998"
        android:drawableLeft="@drawable/ic_facebook"
        android:gravity="center"
        android:maxLines="1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/login_facebook"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="7"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"
            android:text="Don't have an account? " />

        <TextView
            android:id="@+id/create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="bottom"
            android:layout_marginBottom="10dp"
            android:text="Sign up."
            android:textColor="@color/textPrimary"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>